Add: brand-marque-slide

--- a/src/pages/homeScreen/styles.scss
+++ b/src/pages/homeScreen/styles.scss
@@ -121,3 +121,18 @@
 }
 
 // .home-wrapper-2 End
+
+// marque-wrapper-Start
+
+.marque-wrapper {
+  .marque-inner-wrapper {
+    .brand-img {
+      cursor: pointer;
+      img {
+        width: 130px;
+      }
+    }
+  }
+}
+
+// marque-wrapper-End
