--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -38,6 +38,12 @@ a {
   height: 30px;
 }
 
+// Card-Wrapper
+.card-wrapper {
+  background-color: $white;
+  box-shadow: $shadow-primary;
+  padding: 15px;
+}
 // Button-Global
 
 .button {
